--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
-    "@types/next-auth": "^3.13.0",
+    "@tanstack/react-query": "^5.90.20",
     "@uiw/react-codemirror": "^4.25.1",
     "autoprefixer": "^10.4.21",
     "better-auth": "^1.3.7",
@@ -30,7 +30,6 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
-    "next-auth": "^4.24.11",
     "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
